# SEAgent

./: .gitignore  LICENSE  README.md  benchmark.py  pyproject.toml
benchmarks/: __init__.py  hotpotqa.py  tools.py
src/benchmarks/: __init__.py  benchmark.py  hotpotqa.py  tools.py
src/models/: llms.py  models.json
src/utils/: __init__.py  logger.py
tests/: test_hotpotqa.py
tests/benchmarks/: test_hotpotqa.py
tests/models/: test_llms.py
tests/utils/: test_logger.py
utils/: __init__.py  logger.py
